@startuml
class cubibon.callAssistant.llm.AwsBedrockRequest$Companion {
+ List<SystemContentBlock> buildPrompts(List<String>)
+ List<SystemContentBlock> buildPrompts(String)
+ Message buildMessages(ConversationRole,String)
+ Message buildMessages(ConversationRole,List<String>)
+ Message buildUserMessages(String)
+ Message buildUserMessages(List<String>)
+ Message buildAssistantMessages(String)
+ Message buildAssistantMessages(List<String>)
}

class cubibon.callAssistant.llm.AwsBedrockRequest {
+ <<Create>> AwsBedrockRequest(List<SystemContentBlock>,List<Message>,Int,Float,Float,String)
}

class cubibon.callAssistant.llm.AwsBedrockResponse {
+ <<Create>> AwsBedrockResponse(String,Long,Int,Int,String)
}

class cubibon.callAssistant.llm.AwsBedrock {
- BedrockRuntimeAsyncClient? client
- CompletableFuture<Void>? llmJob
- ConverseStreamResponseHandler? requestHandler
+ String sourceTag
+ void doActivate(String)
+ void doDeactivate(String)
- ConverseStreamResponseHandler buildResponseHandler()
+ void doComputeAsync(AwsBedrockRequest,String)
+ void doStop(String)
}


interface cubibon.callAssistant.llm.LlmRequest {
+ P prompts
+ M messages
+ String modelName
+ Float temperature
+ Float topP
+ Int maxTokens
}

interface cubibon.callAssistant.llm.LlmResponse {
+ String message
+ Long responseLatency
+ Int inputToken
+ Int outputToken
+ String sourceTag
}

abstract class cubibon.callAssistant.llm.LlmService {
+  onResultCallbacks
}



cubibon.callAssistant.llm.AwsBedrockRequest +.. cubibon.callAssistant.llm.AwsBedrockRequest$Companion
cubibon.callAssistant.llm.LlmRequest <|.. cubibon.callAssistant.llm.AwsBedrockRequest
cubibon.callAssistant.llm.LlmResponse <|.. cubibon.callAssistant.llm.AwsBedrockResponse
cubibon.callAssistant.llm.LlmService <|-- cubibon.callAssistant.llm.AwsBedrock
cubibon.callAssistant.CallbackInput <|.. cubibon.callAssistant.llm.LlmResponse
cubibon.callAssistant.ReusableService <|-- cubibon.callAssistant.llm.LlmService
@enduml